# 5G

./: .gitignore  CMakeLists.txt  FILES_TO_COMMIT.md  MEMBER8_PROGRESS.md  PR_SUMMARY.md  README.md  git_workflow_guide.md  mac_context_for_opus.md  team_tasks_final.md  testing_and_profiling_guide.md
docs/: MEMBER8_PROGRESS.md  architecture.md  mac_benchmark_v3.html  mac_layer_report_member5.md  mac_report_v3.docx  member1_implementation_report.md  member2_compression_report.md  member7_implementation_report.md  pair_a_pdcp_report.md  pair_b_rlc_report.md  pair_c_mac_report.md  pair_d_testing_report.md  profiling_guide.md  profiling_quick_start.md  setup_guide.md  team_tasks.md
include/: common.h  ip_generator.h  mac.h  pdcp.h  rlc.h
scripts/: README.md  generate_charts.py  quick_test.bat  quick_test.sh  run_profiling.bat  run_profiling.sh
src/: ip_generator.cpp  mac.cpp  main.cpp  pdcp.cpp  rlc.cpp
tests/: tele_project.code-workspace  test_integration.cpp  test_mac.cpp  test_pdcp.cpp  test_rlc.cpp
